roxygen2 2.2.2.99 
-----------------

* S4 classes and methods, and RC classes, are given better default topics, 
  and the file names corresponding to those topics are shorter. This means
  that you should not need to be specify a custom `@alias` for S4 classes,
  generics or methods, or RC classes.

* Correctly generate usage statements for S4 generics and S4 methods.

* `inst` directory not automatically created.  (Fixes #53)

* Explicitly depends on `utils` and `methods` packages to make roxygen more
  compatible with `Rscript`.  Fixes #72

* Now imports `digest` package instead of depending on it.

* Always use C locale when sorting `NAMESPACE` file or tags in `.Rd` files.
  This ensures a consistent ordering across systems.  (Fixes #127)

roxygen2 2.2.2
--------------

* Correctly use keyword `datasets` not `dataset` (Fixes #60)

* Reference classes no longer given incorrect docType (data).

roxygen2 2.2.1
--------------

* Use unicode escapes in test files so tests pass on all platforms.

* Work around bug in `gsub` in C locale by manually specifying `Encoding()`. 

roxygen2 2.2
------------

NEW FEATURES

* Package docType will automatically add package alias, if needed. (Fixes #4)

* Data docType will automatically add `datasets` keyword, default usage, and
  default format. (Fixes #5). Data docType automatically added to data
  objects.

* New `@encoding` tag for manually setting non-ASCII encodings when needed.
  (Fixes #7)


BUG FIXES

* `write.description()` now tries much harder to respect 
  users' original DESCRIPTION field formatting instead of forcibly 
  re-wrapping certain fields at 60 characters.

* `@details` and `@description` now work correctly

* `@useDynLib` now works correctly: 

       @useDynLib packageName routine1 routine2 

   produces

       useDynLib(packageName, routine1)
       useDynLib(packageName, routine2)

   in the NAMESPACE file, instead of separate (wrong) useDynLib statements as
   before.
